# remote

./: .gitignore  Cargo.toml  abc.txt  browser.txt  cargo.toml  clippy.toml  details.ps1  devices.bat  images.txt  justfile  life.txt  mitm.py  rust-toolchain.toml  rustfmt.toml  test.json  windows.txt
.zed/: settings.json  tasks.json
_/common/: Cargo.toml  _.rs  cargo.toml  time.rs
_/record/: _.rs  _.txt
_/screen/: Cargo.toml  _.rs  _.txt  cargo.toml
_/thread/: Cargo.toml  _.rs  queue.rs  spawn.rs  spin.rs
_/thread/spawn/: worker.rs
_/thread/spawn/worker/: pool.rs
_/xyloid/: Cargo.toml  _.rs  cargo.toml  d1.rs  d2.rs
cdp/: _.rs  cargo.toml
live/: _.js  _.rs  backup.txt  cargo.toml  device.html  device.js  index.html  justfile  package.json  ws.html  ws.js
scp/: _.rs  cargo.toml
test/: _.rs  cargo.toml
x/: Cargo.toml  _.rs  _.txt  cargo.toml
