[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
win_desktop_duplication = { version = "0.10" }
image = { version = "0.25.6" }
crossbeam = { version = "0.8.4" }

[package]
authors = ["Zyrosk <hq.zyrosk@gmail.com>"]
categories = ["development-tools::debugging"]
description = "A Chrome DevTools Protocol client"
edition = "2021"
keywords = ["chrome", "client", "devtools", "protocol"]
license = "MIT OR Apache-2.0"
name = "screen"
repository = "https://github.com/hq-zyrosk/main"
version = "0.0.1"

[lib]
doctest = false
path = "_.rs"
