[lib]
doctest = false
path = "_.rs"

[dependencies]
lock_api = { version = "0.4.13" }

[package]
authors = ["Zyrosk <hq.zyrosk@gmail.com>"]
categories = ["development-tools::debugging"]
description = "A Chrome DevTools Protocol client"
edition = "2024"
keywords = ["chrome", "client", "devtools", "protocol"]
license = "MIT OR Apache-2.0"
name = "thread"
repository = "https://github.com/hq-zyrosk/zz"
version = "1.3.6"
